adding sum the amount function

--- a/02 Functions/calculateArea/calculate_Area.html
+++ b/02 Functions/calculateArea/calculate_Area.html
@@ -13,6 +13,17 @@
   <button onclick="calculateArea()">Fläche berechnen</button><br><br>
 
   <p id="result"></p>
+
+  <!-- Grocery Amount -->
+  <label for="1_Lebensmittel" style="white-space:pre">Geben Sie erte Lebensmittel:      &#9;</label>
+  <input type="number" id="1_Lebensmittel"><br><br>
+  <label for="2_Lebensmittel" style="white-space:pre">Geben Sie zweite Lebensmittel:    &#9;</label>
+  <input type="number" id="2_Lebensmittel"><br><br>
+  <label for="3_Lebensmittel" style="white-space:pre">Geben Sie dritte Lebensmittel:    &#9;</label>
+  <input type="number" id="3_Lebensmittel"><br><br>
+  <button onclick="calculateGrocery()">Gesamtbetrag berechnen</button><br><br>
+  <p id="result_Grocery"></p>
+
 <script src="./calculate_Area.js"></script>
 </body>
 </html>
