Level 2 – Closures & Callbacks fertig

--- a/02 Functions/02 uebungen/index.html
+++ b/02 Functions/02 uebungen/index.html
@@ -14,6 +14,12 @@
         <button id="zaehler">Zähler</button>
         <button id="reset">Reset</button>
         <!-- <hr> -->
+        <br />
+        <div id="divZaehler"></div>
+        <br />
+        <div id="timerString"></div>
+        <br />
+        <button id="refresh">Neu Laden</button>
     </div>
     <script src="./01_jsFunctions.js"></script>
 </body>
