level 3 übungen feritg

--- a/02 Functions/02 uebungen/level 3/index.html
+++ b/02 Functions/02 uebungen/level 3/index.html
@@ -19,6 +19,12 @@
         <button id="btnMoreClicks" class="lBtn">Mehrere Ereignisse</button>
         <br />
         <label for="btnMoreClicks" id="lblMoreClicks">...</label>
+
+        <br />
+        <hr>
+        <input type="text" name="eingabe" id="textInput">
+        <button id="btnInput">verschieben</button><br />
+        <label for="textInput" id="ausgabe">...</label>
         <br />
         <hr>
         <button id="btnReload" class="xlBtn">Neu Laden</button>
