array method map reduce

--- a/03 Array/02_array_method/index.html
+++ b/03 Array/02_array_method/index.html
@@ -14,6 +14,6 @@
   </div>
 
  <div id="employeesDetails"></div>
-<script src="./employee_details.js"></script>
+<script src="./script.js"></script>
 </body>
 </html>
