--- a/05 debuging/01 debunging test/index.html
+++ b/05 debuging/01 debunging test/index.html
@@ -8,6 +8,13 @@
 
 <body>
     <h1>Debugging Example</h1>
+    
+    <select id="operation">
+        <option value="add">Addieren</option>
+        <option value="multiply">Multiplizieren</option>
+        <option value="divide">Dividieren</option>
+    </select>
+    <br>
     <label for="input1">Enter Number 1:</label>
     <input type="number" id="input1"><br><br>
     <label for="input2">Enter Number 2:</label>
