--- a/06 working with DOM/01 ToDo_list/index.html
+++ b/06 working with DOM/01 ToDo_list/index.html
@@ -13,7 +13,7 @@
         <!-- Tasks will be displayed here -->
     </ul>
 
-    <button id="clearCompletedBtn">Clear Completed</button>
+    <button id="clearCompletedBtn">Clear Completed</button><button id="clearAll">Clear All</button>
     <script src="./todo_list.js"></script>
 </body>
 </html>
