adding ajax training 2222

--- a/09 AJAX/news article/index.html
+++ b/09 AJAX/news article/index.html
@@ -5,8 +5,8 @@
   <title>Health Articles</title>
 </head>
 <body>
-  <h1>Health Articles</h1>
-  <div id="articles"></div>
+  <h1>NEWS</h1>
+  <div id="news"></div>
 <script src="./newsScript.js"></script>
 </body>
 </html>
