--- a/09 AJAX/news article/index.html
+++ b/09 AJAX/news article/index.html
@@ -7,6 +7,6 @@
 <body>
   <h1>NEWS</h1>
   <div id="news"></div>
-<script src="./newsScript.js"></script>
+<script src="./newScript.js"></script>
 </body>
 </html>
