adding ajax training 222asdasdasd2

--- a/10 fetch API/index.html
+++ b/10 fetch API/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Weather Report</title>
+  <title>Wetterbericht</title>
 </head>
 <body>
-   <h1>Weather Report</h1>
+  <h1>Wetter abrufen</h1>
 
   <form id="weatherForm">
-    <label for="city">Enter City:</label>
-    <input type="text" id="city" name="city">
-    <button type="submit">Get Weather</button>
+    <input type="text" id="city" placeholder="Stadt eingeben" required>
+    <button type="submit">Wetter holen</button>
   </form>
 
   <div id="weatherInfo"></div>
-<script src="./weather_report.js"></script>
+
+  <script src="script.js"></script>
 </body>
 </html>
