--- a/10 fetch API/index.html
+++ b/10 fetch API/index.html
@@ -13,6 +13,6 @@
 
   <div id="weatherInfo"></div>
 
-  <script src="script.js"></script>
+  <script src="weather_report.js"></script>
 </body>
 </html>
